--- a/index.html
+++ b/index.html
@@ -10,5 +10,32 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
+    <nav class="navbar navbar-expand-md navbar-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar-toggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbar-toggler">
+            <a class="navbar-brand" href="#"><img width="100px" class="logo" src="https://s3-alpha-sig.figma.com/img/5865/dfa7/011e3fe40e29839d45c0eccc0f75c1b1?Expires=1696809600&Signature=h9wHqDD3t~Rt4z24zE9Gy8YqahLrLSJFBNHWxMFEHkEXdhKIT9P2i23~g4rpkLtNpxnfBDkNQW4CztHHqn4GHhg5FTl9RHe27bx9lu3EqkqqRV-4HBY2XuuPMUgskgQidvr2eXaRBf5T2m~2IC564XcNmDf-6xhfMiGa1zPP5kPvG~poGGrGi4zqnYiALLjQSkaPLUXSmrx2NkE6iscZtl98GvAZtAHRKyVs5tF6ePVzdbcAjqxYTkXl0UW4d05hbxEHcGBbcqn6qwSJ9dGA07csZhYYMfvnXXbXS2FiBcs8gPkyuBoHo9HdPdkCIYxe9yRsGzXu~zqDluggu79pwA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" width="50" alt="logo programacion"></a>
+            <ul class=" ulNav navbar-nav d-flex justify-content-center align-items-center">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Sobre Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Tipos de Tarjetas</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Precios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Beneficios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active aBordeBoton" aria-current="page" href="#"><button class="botonVerSaldo" type="button">Ver Saldo</button></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
 </body>
 </html>
