Se agregan section main y iconos se termina landing page y se agregan estilos para tarjetas

--- a/index.html
+++ b/index.html
@@ -37,5 +37,58 @@
           </div>
         </div>
     </nav>
+    <section class="main-grid">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-7">
+                    <h1 class="tituloMain">Sistema de transporte
+                        metropolitano <span class="bold">STM</span>.
+                    </h1>
+                    <p class="texto-descripcion">Se implementó en octubre del año 2007 y tiene como objetivos <br> fundamentales contar con medios de transporte  eficientes y <br>
+                        seguros para todo el público.   
+                    </p>
+                    <a class="boton btn" href="./pages/tarjetas.html"><p>Ver Tarjetas</p></a>
+                </div>
+                <div class="col-12 col-md-5">
+                    <div class="container">
+                        <img class="imgMain imagenmain" src="https://s3-alpha-sig.figma.com/img/6637/3247/b4cc771727b57261ce286dc4a52ab55c?Expires=1696809600&Signature=SnlKbbH3No7ywbw7sm27Ls5Zt9pud1FvAwPHfxKG~cT-487ZO5XuKkEFl2Iy9y8yImJo2vLkTZuc4ER3eicx9XMdRx0-gDNlTlNA80rGq1XOh~WE8JBzPY3VFBy0RngJHcJM~eE8CtKbjARNHt6wX9lXwFt9OvS8QfuzTSAZ1DgHw0~M2UlIy5ZndpPRlgP63CG4sw2JunwRCXXkcepcxSm7FNUOfgASsv~kbrExvMJfla~Hz8Ux~xpno2g8pQQqxy4EQJEQzU6LYS2vZrNEVSnox81u0vtc9aPOIZKmca7lr0~83RQjZ2MT1VRuVNuhvImOa5QON0hAlosepzPXuA__&Key-Pair-Id=APKAQ4GOSFWCVNEHN3O4" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="iconos-grid">
+        <div class="container">
+            <div class="row">
+                <div class="columnas-iconos col-12 col-md-4 d-flex flex-row">
+                    <div class="contenedor-circular rounded-circle d-flex justify-content-center align-items-center">
+                        <i class="bi bi-bus-front"></i>
+                    </div>
+                    <div class="contenedor-textos d-flex flex-column">
+                        <h3 class="texto-icono-der">2234</h3>
+                        <p class="parrafo-abajo-icono">Omnibus con STM.</p>
+                    </div>
+                </div>
+                <div class="columnas-iconos col-12 col-md-4 d-flex flex-row">
+                    <div class="contenedor-circular rounded-circle d-flex justify-content-center align-items-center">
+                        <i class="bi bi-diagram-3-fill"></i>
+                    </div>
+                    <div class="contenedor-textos d-flex flex-column">
+                        <h3 class="texto-icono-der">294</h3>
+                        <p class="parrafo-abajo-icono">Líneas</p>
+                    </div>
+                </div>
+                <div class="columnas-iconos col-12 col-md-4 d-flex flex-row">
+                    <div class="contenedor-circular rounded-circle d-flex justify-content-center align-items-center">
+                        <i class="bi bi-gift-fill"></i>
+                    </div>
+                    <div class="contenedor-textos d-flex flex-column">
+                        <h3 class="texto-icono-der">+10</h3>
+                        <p class="parrafo-abajo-icono">Beneficios</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
