se agregan nuevas pages y se crea contenido dentro se fixean errores y se linkean navs

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Beneficios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active aBordeBoton" aria-current="page" href="#"><button class="botonVerSaldo" type="button">Ver Saldo</button></a>
+                <a class="nav-link active aBordeBoton" aria-current="page" href="./pages/versaldo.html"><button class="botonVerSaldo" type="button">Ver Saldo</button></a>
               </li>
             </ul>
           </div>
